--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                     
                     <!-- SMALL IMAGE ADDED (5:3 Ratio) -->
                     <div class="relative w-full max-w-sm rounded-lg overflow-hidden border-2 border-brand-gold/20 group shadow-lg">
-                        <img src="https://placehold.co/500x300/111/C59D5F?text=GIA+TRI+COT+LOI\n(Ty+Le+5:3)&font=montserrat" 
+                        <img src="img/12.jpg" 
                              alt="Giá trị cốt lõi" 
                              class="w-full object-cover hover:scale-105 transition duration-500 aspect-[5/3] opacity-80 group-hover:opacity-100">
                     </div>
@@ -777,4 +777,5 @@
         });
     </script>
 </body>
+
 </html>
